
Bug Fixes
---------------------
* GITHUB#14049: Randomize KNN codec params in RandomCodec. Fixes scalar quantization div-by-zero
  when all values are identical. (Mike Sokolov)

* GITHUB#14075: Remove duplicate and add missing entry on brazilian portuguese stopwords list. (Arthur Caccavo)

Other
---------------------
(No changes)

======================= Lucene 10.2.0 =======================

API Changes
---------------------
* GITHUB#14069: Added DocIdSetIterator#intoBitSet API to let implementations
  optimize loading doc IDs into a bit set. (Adrien Grand)

* GITHUB#14134: Added Bits#applyMask API to help apply live docs as a mask on a
  bit set of matches. (Adrien Grand)

* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

* GITHUB#14236: CombinedFieldQuery moved from lucene-sandbox to lucene-core.
  (Adrien Grand)

* GITHUB#14282: Remove redundant field argument from the DocIdSetBuilder constructor that takes a
  PointValues instance. (Luca Cavanna)

* GITHUB#14289: The unused public static DocIdSet#all method has been deprecated.
  (Luca Cavanna)

* GITHUB#14292: The redundant DocIdSet#bits method has been deprecated. (Luca Cavanna)

New Features
---------------------

* GITHUB#14084, GITHUB#13635, GITHUB#13634, GITHUB#14170: Adds new `SeededKnnVectorQuery` query.
  These queries allow for the vector search entry points to be initialized via a `seed` query. This follows
  the research provided via https://arxiv.org/abs/2307.16779. (Sean MacAvaney, Ben Trent).

* GITHUB#13974: Introducing DocValuesMultiRangeQuery.SortedSetStabbingBuilder into sandbox. (Mikhail Khludnev)

* GITHUB#14204: Added HistogramCollectorManager to efficiently compute a
  histogram of the distribution of the values of a field, for documents
  matching a given query. (Adrien Grand)

* GITHUB#14278: Added `reuseChars` option to DictionaryCompoundWordTokenFilter, for use with