@@ -168,7 +168,7 @@ final class SegmentCoreReaders {
   @SuppressWarnings("try")
   void decRef() throws IOException {
     if (ref.decrementAndGet() == 0) {
-      try (Closeable finalizer = this::notifyCoreClosedListeners) {
+      try (Closeable _ = this::notifyCoreClosedListeners) {
         IOUtils.close(
             fields,
             termVectorsReaderOrig,
